--- a/BugTrackerUI/wwwroot/css/site.css
+++ b/BugTrackerUI/wwwroot/css/site.css
@@ -641,3 +641,19 @@ text-decoration: none;
      .submission-edit-icon:hover {
           color: var(--status-open);
      }
+
+/*PROFILE*/
+.my-submission-heading {
+     color: var(--black);
+     text-transform: uppercase;
+}
+
+my-submission-text {
+     margin-bottom: 0;
+     padding-left: 1rem;
+}
+
+.my-submission-separator {
+color: var(--gray);
+height: 2px;
+opacity: 1;
