--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -42,11 +42,30 @@
                             <div class="bug-entry-text-title" @onclick="(() => OpenDetails(b))">
                                 @b.Bug
                             </div>
-                            <div>
-                                <div class="bug-entry-category-text @GetBugCategoryClass(b)" @onclick="(() => OpenDetails(b))">
-                                    @b.Category?.CategoryName
-                                </div>
-                            </div>
+                            @if (archivingBug is null || archivingBug.Id != b.Id)
+                                {
+                                    <div class="bug-entry-bottom">
+                                        <div class="bug-entry-category-text @GetBugCategoryClass(b)" @onclick="(() => OpenDetails(b))">
+                                            @b.Category?.CategoryName
+                                        </div>
+                                        <AuthorizeView Policy="Admin">
+                                            <button @onclick="(() => archivingBug = b)" class="btn btn-archive bug-entry-category-text">
+                                                archive
+                                            </button>
+                                        </AuthorizeView>
+                                    </div>
+                                }
+                              else
+                                {
+                                    <div class="bug-entry-bottom">
+                                        <button class="btn btn-archive btn-archive-confirm" @onclick="ArchiveBug">
+                                            confirm
+                                        </button>
+                                        <button class="btn btn-archive btn-archive-cancel" @onclick="(() => archivingBug = null)">
+                                            cancel
+                                        </button>
+                                    </div>
+                                }
                         </div>
                         <div class="bug-entry-status @GetBugStatusClass(b)">
                             <div class="bug-entry-status-text">
@@ -89,6 +108,7 @@
      private List<BugModel> bugs;
      private List<CategoryModel> categories;
      private List<StatusModel> statuses;
+     private BugModel archivingBug;
 
      private string selectedCategory = "All";
      private string selectedStatus = "All";
@@ -100,6 +120,15 @@
           categories = await categoryData.GetAllCategories();
           statuses = await statusData.GetAllStatuses();
           await LoadAndVerifyUser();
+     }
+
+     private async Task ArchiveBug()
+     {
+          archivingBug.Archived = true;
+          await bugData.UpdateBug(archivingBug);
+          bugs.Remove(archivingBug);
+          archivingBug = null;
+          //await FilterBugs();
      }
 
      private void LoadReportPage()
