Finished styling the the detail form. Admin can now change the status of the bug report. Finish desktop version of the app

--- a/BugTrackerUI/wwwroot/css/site.css
+++ b/BugTrackerUI/wwwroot/css/site.css
@@ -684,3 +684,30 @@ my-submission-text {
 .btn-archive-confirm {
      color: var(--status-closed);
 }
+
+/*DETAILS STATUS*/
+.admin-details {
+     margin-top: 20px;
+}
+
+.admin-set-statuses {
+     display: flex;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+}
+
+.btn-status-resolved:hover {
+     color: var(--status-resolved);
+}
+
+.btn-status-open:hover {
+     color: var(--status-open);
+}
+
+.btn-status-in-progress:hover {
+     color: var(--status-in-progress);
+}
+
+.btn-status-closed:hover {
+     color: var(--status-closed);
+}
