--- a/BugTrackerUI/Pages/Index.razor
+++ b/BugTrackerUI/Pages/Index.razor
@@ -25,6 +25,49 @@
                class="form-control rounded-control"
                @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     </div>
+    <div class="col-12 d-block d-md-none">
+        @if (categories is not null && showCategories)
+           {
+                <div class="categories">
+                    <span class="text-uppercase fw-bold">Category</span>
+                    <div class="@GetSelectedCategory()" @onclick="(() => OnCategoryClick())">All</div>
+                    @foreach (var c in categories)
+                        {
+                            <div class="@GetSelectedCategory(c.CategoryName)"
+                                @onclick="(() => OnCategoryClick(c.CategoryName))">
+                                @c.CategoryName
+                            </div>
+                        }
+                </div>
+           }
+          else
+           {
+                <div class="categories" @onclick="(() => showCategories = true)">
+                    <span class="selected-category">@selectedCategory</span>
+                </div>
+           }
+
+           @if (statuses is not null && showStatuses)
+              {
+                    <div class="statuses">
+                        <span class="text-uppercase fw-bold">Status</span>
+                        <div class="@GetSelectedStatus()" @onclick="(() => OnStatusClick())">All</div>
+                        @foreach (var s in statuses)
+                           {
+                                <div class="@GetSelectedStatus(s.StatusName)"
+                                    @onclick="(() => OnStatusClick(s.StatusName))">
+                                    @s.StatusName
+                                    </div>
+                           }
+                    </div>
+              }
+             else
+              {
+                    <div class="statuses" @onclick="(() => showStatuses = true)">
+                        <span class="selected-status">@selectedStatus</span>
+                    </div>
+              }
+    </div>
 </div>
 
 <div class="row">
@@ -77,7 +120,7 @@
            }
     </div>
 
-    <div class="col-md-4 col-xl-3">
+    <div class="col-md-4 col-xl-3 d-none d-md-block">
         @if (categories is not null)
            {
                 <div class="categories">
@@ -113,7 +156,9 @@
      private string selectedCategory = "All";
      private string selectedStatus = "All";
      private string searchText = "";
-     bool isSortedByNew = true;
+     private bool isSortedByNew = true;
+     private bool showCategories = false;
+     private bool showStatuses = false;
 
      protected async override Task OnInitializedAsync()
      {
@@ -284,12 +329,14 @@
      private async Task OnCategoryClick(string category = "All")
      {
           selectedCategory = category;
+          showCategories = false;
           await FilterBugs();
      }
 
      private async Task OnStatusClick(string status = "All")
      {
           selectedStatus = status;
+          showStatuses = false;
           await FilterBugs();
      }
 
