--- a/BugTrackerUI/Pages/Report.razor
+++ b/BugTrackerUI/Pages/Report.razor
@@ -10,7 +10,7 @@
 
 <h1 class="page-heading text-uppercase mb-4">Report a Bug</h1>
 
-<div class="row justify-content-center create-form">
+<div class="row justify-content-center report-form">
     <div class="col-xl-8 col-lg-10 form-layout">
         <div class="close-button-section">
             <button class="btn btn-close" @onclick="ClosePage"></button>
