--- a/BugTrackerUI/wwwroot/css/site.css
+++ b/BugTrackerUI/wwwroot/css/site.css
@@ -712,3 +712,89 @@ my-submission-text {
      color: var(--status-closed);
 }
 
+/*MEDIA QUERIES*/
+@media screen and (max-width: 575px) {
+     .btn-accept,
+     .btn-reject {
+          width: 45%;
+     }
+
+     .bug-entry {
+          grid-template-columns: 100px 1fr 45px;
+     }
+
+     .bug-entry-no-votes,
+     .bug-entry-voted,
+     .bug-entry-not-voted {
+          min-height: 100px;
+     }
+}
+
+@media screen and (max-width: 767px) {
+     .search-box {
+          --bs-gutter-x: inherit;
+          margin-top: 10px;
+     }
+
+     .nav-links {
+          justify-content: center;
+     }
+
+     .login-link {
+          flex: 1;
+          padding-left: 0;
+     }
+
+     .categories,
+     .statuses {
+          margin: 0;
+          margin-top: 10px;
+          padding: 0.375rem;
+          padding-left: 0.75rem;
+     }
+
+     .bug-container {
+          margin-bottom: 1rem;
+     }
+
+     .report-form,
+     .detail-form {
+          margin: 0;
+          margin-bottom: 1rem;
+     }
+
+     .form-layout {
+          padding: 1rem;
+     }
+
+     .submission {
+          margin: 0;
+          padding: 0.5rem;
+          margin-bottom: 0.5rem;
+     }
+
+     .bug-results {
+          padding: 0;
+          margin-top: 0;
+     }
+
+     .admin-details {
+          margin-top: 0;
+     }
+
+     .bug-detail-status-section {
+          padding: 0.5rem;
+     }
+
+     .bug-detail-bug {
+          font-size: 1rem;
+     }
+
+     .bug-detail-text {
+          padding-left: 12px;
+     }
+
+     .bug-entry-category-text {
+          padding-top: 0.5rem;
+     }
+}
